www/common/css/style.css
/**
 * @author Tobias Nolte <tobias@abygr.com>
 * @link http://www.mndcntrl.com/ Developer Blog
 */  

/* Fonts */

@font-face {
  font-family: OpenSans;
  src: url('../fonts/OpenSans-Regular.ttf');
}

/* General */

/* html, body {
  height: 100%;
}*/

body {
  padding: 0;
  margin: 0;
  color: #111111;
  font-family: 'OpenSans';
  font-size: 1.2rem;
  background: #F0F2EB;
}

a, a:hover {
  color: #1693A5;
  font-weight: bold;
  text-decoration: none;
}

#home_link, #single_back_link {
  color: #FFFFFF;
  font-size: 2rem;
  background: #FF4242;
  margin: 0;
  padding: 0.75rem;
  border-radius: 10px;
  position: fixed;
  right: 1rem;
  bottom: 1rem;
  transition: all 1s ease 0s;
}

#home_link:hover, #single_back_link:hover {
  color: #FF4242;
  background: #FFFFFF;
  transition: all 1s ease 0s;
}

input, textarea, button {
  color: #111111;
  font-family: 'OpenSans';
  font-size: 1rem;
  padding: 0.1rem 0.5rem;
  margin: 0.2rem;
  border: 0;
  border-radius: 8px;
  background: #F0F2EB;
}

.check_field {
  max-height: 1.4rem;
  display: none;
}

button {
  color: #FFFFFF !important;
  background: #FF4242 !important;
}

#find {
  text-align: right;
}

#find input {
  text-align: left;
}

#imprint_link {
  font-size: 0.6rem;
  color: #666666;
  position: absolute;
  top: 0.1rem;
  right: 0.1rem;
}

/* Board */

#help_link {
color: #FF4242;
font-size: 75%;
margin: 0 0 0 3rem;
}

.new {
  color: #F02311;
  font-weight: bold;
}

#topics_list_box {
  background: url("../img/wood_bg.jpg") repeat left top;
  padding: 4rem 8rem;
}

#topics_list {
  background: #DCE6E6;
  border-radius: 15px;
  padding: 1rem;
}

#topics_list_headline {
  color: #FF4242;
  font-size: 2rem;
  margin-bottom: 0.5rem;
}

#topics_list ul, #topics_list ul a {
  display: inline;
  list-style: none;
  padding-left: 0;
  color: #7A6A53;
}

#topics_list li {
  display: inline;
}

#topics_list li:after {
  content: ", ";
}

#topics_list li:last-child:after {
  content: "";
}

#open_topic_form_headline, #answer_form_headline {
color: #FF4242;
font-size: 2rem;
}

#open_topic_form {
  background: #BAC7C3;
  padding: 2rem 8rem;
  overflow: auto;
}

#open_topic_form input, #answer_form input {
  width: 40rem;
}

#open_topic_form textarea, #answer_form textarea {
  width: 40rem;
  height: 10rem;
  margin-top: 0.2rem;
}

#board_box {
  width: 100%;
  background: url("../img/seamless_bg.jpg") repeat left top;
  padding: 1rem 0.5rem;
  overflow: auto;
}

.board_post {
  float: left;
  margin: 0.5rem;
  width: 28%;
}

.board_post:nth-child(3n+1) {
  clear: left;
}

.board_post_area {
  padding: 0.5rem;
  background: #F0F2EB;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  overflow: auto;
}

.board_replies_area {
  padding: 0.25rem 0.5rem;
  background: #DCE6E6;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  overflow: auto;
}

.board_headline, .board_headline a {
  font-size: 120%;
  color: #FF4242;
}

.board_content {
  max-height: 8.2rem;
  overflow : hidden;
}

.board_author, .board_date, .board_topic, .board_reply_author, .board_reply_date {
  font-size: 0.75rem;
  color: #555555;
  float: left;
  margin: 0.2rem;
}

.board_reply_content {
  max-height: 5rem;
  overflow : hidden;
  clear: both;
  border-top: 1px dashed #CCCCCC;
}

/* Single Post */

#single_post {
  margin: 5rem 0;
  text-align: center;
}

#single_post_area, #single_replies_area {
  text-align: justify;
  margin: 0 auto;
  padding: 0 0 4rem 0;
  width: 50rem;
  overflow: auto;
}

.single_reply {
  overflow: auto;
  border-top: 1px dashed #FF4242;
}

.single_headline, .single_headline a {
  font-size: 150%;
  color: #FF4242;
  margin: 0 0 2rem 0;
}

.single_author, .single_date, .single_topic, .single_reply_author, .single_reply_date {
  font-size: 1rem;
  color: #555555;
  float: left;
  margin: 1rem 2rem 1rem 0;
}

#answer_form {
  background: #BAC7C3;
  padding: 1rem 4rem;
  margin: auto;
  text-align: left;
  width: 50rem;
  border: 1px dashed #CCCCCC;
  border-radius: 15px;
}

